# Project_Chimera_AI-agent_Infrastructure-Challenge-

./: .coderabbit.yaml  .env.template  .gitignore  .pre-commit-config.yaml  ALL_TEST_COMMANDS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_AUDIT.md  Project Chimera SRS Document_ Autonomous Influencer Network.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  test_docker.sh  test_security_issue.py
.cursor/: mcp.json
.cursor/rules/: agent.mdc  chimera.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-sync.yml  ci.yml
docs/: BLACK_SWAN_PROTECTION.md  ENTERPRISE_PROMPTS.md  GOLDEN_ENVIRONMENT.md  PROMPT_GUIDE.md  SECURITY.md  TASK_3_COMPLETION.md
docs/adr/: 001-mcp-integration.md  002-tdd-methodology.md  003-zero-trust-security.md  README.md
ide-chat-history/: README.md  session-01-infrastructure-setup.md  session-02-architecture-design.md  session-02-engineering-decisions.md  session-03-specification-engineering.md  session-04-development-discussions.md
research/: Project_Chimera_CEO_Vision.md  Project_Chimera_Challenge_Report.md  Project_Chimera_Challenge_Report_PDF.md  Project_Chimera_Strategic_Research_Report.md  Project_chimera_research_architectural_report.md  architecture_strategy.md  tooling_strategy.md
scripts/: auto-sync.sh  check-env.sh  gen-env-template.sh  mcp-diagnostic.sh  mcp-health-check.sh  mcp-verify.sh  setup-cron.sh  setup-golden-env.sh  spec-check.sh
skills/: README.md  interface.py
skills/asset_factory/: README.md  __init__.py  contract.py  logic.py
skills/commerce_manager/: README.md  asset_ledger.py  contract.py  logic.py
skills/trend_analyzer/: README.md  __init__.py  contract.py  logic.py
specs/: _meta.md  frontend-implementation.md  frontend.md  functional.md  openclaw_integration.md  rule-intent-structured.md  rule-intent.md  technical.md  traceability.md
src/chimera/: __init__.py
src/chimera/agents/: __init__.py
src/chimera/commerce/: __init__.py
src/chimera/core/: __init__.py
src/chimera/governance/: kill_switch.py
src/chimera/mcp/: __init__.py  sense.py
src/chimera/security/: __init__.py
src/tests/: conftest.py
src/tests/unit/: test_core.py
tests/: README.md  __init__.py  conftest.py  test_core.py
tests/unit/: test_asset_ledger.py  test_occ.py  test_skills_interface.py  test_trend_fetcher.py
